tests/algorithms/x/Pascal/matrix/tests/test_matrix_operation.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/matrix/tests/test_matrix_operation.pas
test_matrix_operation.pas(272,54) Error: Incompatible type for arg no. 1: Got "RealArrayArray", expected "{Open} Array Of LongInt"
test_matrix_operation.pas(273,59) Error: Incompatible type for arg no. 1: Got "RealArrayArray", expected "{Open} Array Of LongInt"
test_matrix_operation.pas(274,59) Error: Incompatible type for arg no. 1: Got "RealArrayArray", expected "{Open} Array Of LongInt"
test_matrix_operation.pas(275,59) Error: Incompatible type for arg no. 1: Got "RealArrayArray", expected "{Open} Array Of LongInt"
test_matrix_operation.pas(276,38) Error: Incompatible type for arg no. 1: Got "RealArrayArray", expected "{Open} Array Of LongInt"
test_matrix_operation.pas(277,48) Error: Incompatible type for arg no. 1: Got "RealArrayArray", expected "{Open} Array Of LongInt"
test_matrix_operation.pas(292) Fatal: There were 6 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
